# oxidec

./: .gitignore  .ignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PHASE_5B_COMPLETE.md  README.md  RFC.md  RFC_PHASE6_COMPLETE.md  SAFETY.md
.claude/: settings.json
benches/: arena.rs  string.rs
crates/oxidec/: Cargo.toml
crates/oxidec/benches/: arena.rs  dispatch.rs  introspection.rs  invocation_pool.rs  proxy.rs  selector_interning.rs  string.rs
crates/oxidec/src/: error.rs  lib.rs
crates/oxidec/src/runtime/: arena.rs  category.rs  class.rs  dispatch.rs  forwarding.rs  introspection.rs  invocation.rs  message.rs  mod.rs  object.rs  pool.rs  protocol.rs  proxy.rs  selector.rs
crates/oxidec/tests/: arena_leak.rs  forwarding.rs  introspection_test.rs  pool_performance_test.rs  property_test.rs  stress_test.rs
crates/oxidex-aot/: Cargo.toml
crates/oxidex-aot/src/: lib.rs
crates/oxidex-aot/tests/: README.md
crates/oxidex-bytecode/: Cargo.toml
crates/oxidex-bytecode/src/: lib.rs
crates/oxidex-bytecode/tests/: README.md
crates/oxidex-cli/: Cargo.toml
crates/oxidex-cli/src/: main.rs
crates/oxidex-cli/src/commands/: mod.rs
crates/oxidex-cli/tests/: README.md
crates/oxidex-codegen/: Cargo.toml
crates/oxidex-codegen/src/: lib.rs
crates/oxidex-codegen/tests/: README.md
crates/oxidex-interpreter/: Cargo.toml
crates/oxidex-interpreter/src/: lib.rs
crates/oxidex-interpreter/tests/: README.md
crates/oxidex-jit/: Cargo.toml
crates/oxidex-jit/src/: lib.rs
crates/oxidex-jit/tests/: README.md
crates/oxidex-log/: Cargo.toml
crates/oxidex-log/src/: lib.rs
crates/oxidex-mem/: Cargo.toml
crates/oxidex-mem/benches/: interner.rs
crates/oxidex-mem/src/: arena.rs  factory.rs  interner.rs  lib.rs  symbol.rs
crates/oxidex-std/: Cargo.toml
crates/oxidex-std/src/: lib.rs  prelude.rs
crates/oxidex-std/tests/: README.md
crates/oxidex-syntax/: Cargo.toml  test_tokens.rs
crates/oxidex-syntax/benches/: lexer.rs  parser.rs
crates/oxidex-syntax/examples/: test_diagnostics.rs
crates/oxidex-syntax/src/: diagnostic.rs  error.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  span.rs  token.rs
crates/oxidex-syntax/src/ast/: decl.rs  expr.rs  mod.rs  pat.rs  stmt.rs  ty.rs
crates/oxidex-syntax/tests/: README.md
crates/oxidex-typecheck/: Cargo.toml
crates/oxidex-typecheck/src/: lib.rs
crates/oxidex-typecheck/src/check/: decl.rs  expr.rs  mod.rs  pat.rs  stmt.rs  ty.rs
crates/oxidex-typecheck/src/context/: env.rs  mod.rs  registry.rs  subst.rs
crates/oxidex-typecheck/src/error/: mod.rs
crates/oxidex-typecheck/src/infer/: context.rs  mod.rs  unify.rs
crates/oxidex-typecheck/src/types/: display.rs  mod.rs  ty.rs
crates/oxidex-typecheck/tests/: README.md
docs/: arena_best_practices.md  phase_4c_summary.md
examples/: README.md  advanced.ox  classes.ox  collections.ox  comptime.ox  control_flow.ox  enums.ox  functions.ox  generics.ox  hello_world.ox  loops.ox  operators.ox  pattern_matching.ox  protocols.ox  string_interpolation.ox  structs.ox
src/: error.rs  lib.rs
src/runtime/: arena.rs  category.rs  class.rs  dispatch.rs  encoding.rs  forwarding.rs  mod.rs  object.rs  protocol.rs  selector.rs  string.rs
tests/: forwarding.rs  integration_parsing.rs  integration_roundtrip.rs  swizzling.rs  test_diagnostics.rs
tests/common/: mod.rs
