[package]
name = "oxidec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OxideC: A modern Objective-C inspired dynamic runtime for systems programming"
readme = "../../README.md"
keywords = ["objective-c", "runtime", "ffi", "dynamic", "memory"]
categories = ["memory-management", "development-tools::ffi", "api-bindings"]

[dependencies]
fxhash = "0.2"
backtrace = { version = "0.3", optional = true }

[features]
default = []
arena_backtrace = ["backtrace"]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
fxhash = "0.2"
ahash = "0.8"

[[bench]]
name = "arena"
harness = false

[[bench]]
name = "string"
harness = false

[[bench]]
name = "selector_interning"
harness = false

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "invocation_pool"
harness = false

[[bench]]
name = "proxy"
harness = false

[[bench]]
name = "introspection"
harness = false
