[package]
name = "oxidex-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxidex-mem = { path = "../oxidex-mem", features = ["string-interner"] }


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lexer"
harness = false

# [[bench]]
# name = "parser"
# harness = false
