[package]
name = "oxidex-typecheck"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxidex-syntax = { path = "../oxidex-syntax" }
oxidex-mem = { path = "../oxidex-mem", features = ["string-interner", "local-arena"] }
